@@ -6,11 +6,10 @@ import java.util.List;
 public class Main {
     public static void main(String[] args) {
 
-        List<String> months = Arrays.asList(
+        List<String> months = List.of(
                 "January", "February", "March", "April", "May", "June",
                 "July", "August", "September", "October", "November", "December"
         );
-        months.stream()
-                .forEach(month -> System.out.println(month));
+                months.forEach(month -> System.out.println(month));
     }
 }
